// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotionalInput default 1`] = `
.c1 {
  grid-area: Currency;
  opacity: 0.59;
  font-size: 0.625rem;
  line-height: 1.2rem;
}

.c0 {
  display: grid;
  grid-template-columns: 30px auto 30px;
  grid-template-areas: 'Currency Input ResetInputValue' '. Message .';
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-rows: 23px 0;
}

.c2 {
  grid-area: Input;
  background: none;
  text-align: center;
  outline: none;
  border: none;
  font-size: 0.75rem;
  width: 80px;
  padding: 2px 0;
}

.spot-tile:hover .c2 {
  box-shadow: 0px 1px 0px #fff;
}

.spot-tile:hover .c2:focus,
.c2:focus {
  box-shadow: 0px 1px 0px #5f94f5;
}

<div
  className="c0"
>
  <span
    className="c1"
    data-qa="notional-input__currency-pair-symbol"
  >
    EUR
  </span>
  <input
    className="c2"
    data-qa-id="notional-input__input-eurusd"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="1,000,000"
  />
</div>
`;

exports[`NotionalInput default 2`] = `
.c1 {
  grid-area: Currency;
  opacity: 0.59;
  font-size: 0.625rem;
  line-height: 1.2rem;
}

.c0 {
  display: grid;
  grid-template-columns: 30px auto 30px;
  grid-template-areas: 'Currency Input ResetInputValue' '. Message .';
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-rows: 23px 0;
}

.c2 {
  grid-area: Input;
  background: none;
  text-align: center;
  outline: none;
  border: none;
  font-size: 0.75rem;
  width: 80px;
  padding: 2px 0;
}

.spot-tile:hover .c2 {
  box-shadow: 0px 1px 0px #333333;
}

.spot-tile:hover .c2:focus,
.c2:focus {
  box-shadow: 0px 1px 0px #5f94f5;
}

<div
  className="c0"
>
  <span
    className="c1"
    data-qa="notional-input__currency-pair-symbol"
  >
    EUR
  </span>
  <input
    className="c2"
    data-qa-id="notional-input__input-eurusd"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="1,000,000"
  />
</div>
`;

exports[`NotionalInput disabled 1`] = `
.c1 {
  grid-area: Currency;
  opacity: 0.59;
  font-size: 0.625rem;
  line-height: 1.2rem;
}

.c0 {
  display: grid;
  grid-template-columns: 30px auto 30px;
  grid-template-areas: 'Currency Input ResetInputValue' '. Message .';
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-rows: 23px 0;
}

.c2 {
  grid-area: Input;
  background: none;
  text-align: center;
  outline: none;
  border: none;
  font-size: 0.75rem;
  width: 80px;
  padding: 2px 0;
  opacity: 0.3;
}

.spot-tile:hover .c2 {
  box-shadow: 0px 1px 0px #fff;
}

.spot-tile:hover .c2:focus,
.c2:focus {
  box-shadow: 0px 1px 0px #5f94f5;
}

<div
  className="c0"
>
  <span
    className="c1"
    data-qa="notional-input__currency-pair-symbol"
  >
    EUR
  </span>
  <input
    className="c2"
    data-qa-id="notional-input__input-eurusd"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="1,000,000"
  />
</div>
`;

exports[`NotionalInput disabled 2`] = `
.c1 {
  grid-area: Currency;
  opacity: 0.59;
  font-size: 0.625rem;
  line-height: 1.2rem;
}

.c0 {
  display: grid;
  grid-template-columns: 30px auto 30px;
  grid-template-areas: 'Currency Input ResetInputValue' '. Message .';
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-rows: 23px 0;
}

.c2 {
  grid-area: Input;
  background: none;
  text-align: center;
  outline: none;
  border: none;
  font-size: 0.75rem;
  width: 80px;
  padding: 2px 0;
  opacity: 0.3;
}

.spot-tile:hover .c2 {
  box-shadow: 0px 1px 0px #333333;
}

.spot-tile:hover .c2:focus,
.c2:focus {
  box-shadow: 0px 1px 0px #5f94f5;
}

<div
  className="c0"
>
  <span
    className="c1"
    data-qa="notional-input__currency-pair-symbol"
  >
    EUR
  </span>
  <input
    className="c2"
    data-qa-id="notional-input__input-eurusd"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="1,000,000"
  />
</div>
`;

exports[`NotionalInput show reset button 1`] = `
.c1 {
  grid-area: Currency;
  opacity: 0.59;
  font-size: 0.625rem;
  line-height: 1.2rem;
}

.c0 {
  display: grid;
  grid-template-columns: 30px auto 30px;
  grid-template-areas: 'Currency Input ResetInputValue' '. Message .';
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-rows: 23px 0;
}

.c2 {
  grid-area: Input;
  background: none;
  text-align: center;
  outline: none;
  border: none;
  font-size: 0.75rem;
  width: 80px;
  padding: 2px 0;
}

.spot-tile:hover .c2 {
  box-shadow: 0px 1px 0px #fff;
}

.spot-tile:hover .c2:focus,
.c2:focus {
  box-shadow: 0px 1px 0px #5f94f5;
}

.c3 {
  background-color: #2e3543;
  border: 2px solid #272d3a;
  border-radius: 3px;
  margin-left: 8px;
  grid-area: ResetInputValue;
  font-size: 0.625rem;
  line-height: 1.2rem;
}

<div
  className="c0"
>
  <span
    className="c1"
    data-qa="notional-input__currency-pair-symbol"
  >
    EUR
  </span>
  <input
    className="c2"
    data-qa-id="notional-input__input-eurusd"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="1,000,000"
  />
  <button
    className="c3"
    data-qa="notional-input__reset-input-value"
    onClick={[Function]}
  >
    <i
      className="fas fa-redo fa-flip-horizontal"
    />
  </button>
</div>
`;

exports[`NotionalInput show reset button 2`] = `
.c1 {
  grid-area: Currency;
  opacity: 0.59;
  font-size: 0.625rem;
  line-height: 1.2rem;
}

.c0 {
  display: grid;
  grid-template-columns: 30px auto 30px;
  grid-template-areas: 'Currency Input ResetInputValue' '. Message .';
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-rows: 23px 0;
}

.c2 {
  grid-area: Input;
  background: none;
  text-align: center;
  outline: none;
  border: none;
  font-size: 0.75rem;
  width: 80px;
  padding: 2px 0;
}

.spot-tile:hover .c2 {
  box-shadow: 0px 1px 0px #333333;
}

.spot-tile:hover .c2:focus,
.c2:focus {
  box-shadow: 0px 1px 0px #5f94f5;
}

.c3 {
  background-color: #fff;
  border: 2px solid #f4f6f9;
  border-radius: 3px;
  margin-left: 8px;
  grid-area: ResetInputValue;
  font-size: 0.625rem;
  line-height: 1.2rem;
}

<div
  className="c0"
>
  <span
    className="c1"
    data-qa="notional-input__currency-pair-symbol"
  >
    EUR
  </span>
  <input
    className="c2"
    data-qa-id="notional-input__input-eurusd"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="1,000,000"
  />
  <button
    className="c3"
    data-qa="notional-input__reset-input-value"
    onClick={[Function]}
  >
    <i
      className="fas fa-redo fa-flip-horizontal"
    />
  </button>
</div>
`;

exports[`NotionalInput with error 1`] = `
.c1 {
  grid-area: Currency;
  opacity: 0.59;
  font-size: 0.625rem;
  line-height: 1.2rem;
}

.c3 {
  color: #f94c4c;
  grid-area: Message;
  font-size: 0.6rem;
  line-height: normal;
  padding-top: 2px;
}

.c0 {
  display: grid;
  grid-template-columns: 30px auto 30px;
  grid-template-areas: 'Currency Input ResetInputValue' '. Message .';
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-rows: 23px 13px;
  margin-bottom: -0.5rem;
}

.c2 {
  grid-area: Input;
  background: none;
  text-align: center;
  outline: none;
  border: none;
  font-size: 0.75rem;
  width: 80px;
  padding: 2px 0;
  box-shadow: 0px 1px 0px #f94c4c;
}

<div
  className="c0"
>
  <span
    className="c1"
    data-qa="notional-input__currency-pair-symbol"
  >
    EUR
  </span>
  <input
    className="c2"
    data-qa-id="notional-input__input-eurusd"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="1,000,000"
  />
  <div
    className="c3"
    data-qa="notional-input__validation-message"
  >
    Some error
  </div>
</div>
`;

exports[`NotionalInput with error 2`] = `
.c1 {
  grid-area: Currency;
  opacity: 0.59;
  font-size: 0.625rem;
  line-height: 1.2rem;
}

.c3 {
  color: #f94c4c;
  grid-area: Message;
  font-size: 0.6rem;
  line-height: normal;
  padding-top: 2px;
}

.c0 {
  display: grid;
  grid-template-columns: 30px auto 30px;
  grid-template-areas: 'Currency Input ResetInputValue' '. Message .';
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-rows: 23px 13px;
  margin-bottom: -0.5rem;
}

.c2 {
  grid-area: Input;
  background: none;
  text-align: center;
  outline: none;
  border: none;
  font-size: 0.75rem;
  width: 80px;
  padding: 2px 0;
  box-shadow: 0px 1px 0px #f94c4c;
}

<div
  className="c0"
>
  <span
    className="c1"
    data-qa="notional-input__currency-pair-symbol"
  >
    EUR
  </span>
  <input
    className="c2"
    data-qa-id="notional-input__input-eurusd"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="1,000,000"
  />
  <div
    className="c3"
    data-qa="notional-input__validation-message"
  >
    Some error
  </div>
</div>
`;

exports[`NotionalInput with info 1`] = `
.c1 {
  grid-area: Currency;
  opacity: 0.59;
  font-size: 0.625rem;
  line-height: 1.2rem;
}

.c3 {
  color: #5f94f5;
  grid-area: Message;
  font-size: 0.6rem;
  line-height: normal;
  padding-top: 2px;
}

.c0 {
  display: grid;
  grid-template-columns: 30px auto 30px;
  grid-template-areas: 'Currency Input ResetInputValue' '. Message .';
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-rows: 23px 13px;
  margin-bottom: -0.5rem;
}

.c2 {
  grid-area: Input;
  background: none;
  text-align: center;
  outline: none;
  border: none;
  font-size: 0.75rem;
  width: 80px;
  padding: 2px 0;
  box-shadow: 0px 1px 0px #5f94f5;
}

<div
  className="c0"
>
  <span
    className="c1"
    data-qa="notional-input__currency-pair-symbol"
  >
    EUR
  </span>
  <input
    className="c2"
    data-qa-id="notional-input__input-eurusd"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="1,000,000"
  />
  <div
    className="c3"
    data-qa="notional-input__validation-message"
  >
    Some information
  </div>
</div>
`;

exports[`NotionalInput with info 2`] = `
.c1 {
  grid-area: Currency;
  opacity: 0.59;
  font-size: 0.625rem;
  line-height: 1.2rem;
}

.c3 {
  color: #5f94f5;
  grid-area: Message;
  font-size: 0.6rem;
  line-height: normal;
  padding-top: 2px;
}

.c0 {
  display: grid;
  grid-template-columns: 30px auto 30px;
  grid-template-areas: 'Currency Input ResetInputValue' '. Message .';
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-rows: 23px 13px;
  margin-bottom: -0.5rem;
}

.c2 {
  grid-area: Input;
  background: none;
  text-align: center;
  outline: none;
  border: none;
  font-size: 0.75rem;
  width: 80px;
  padding: 2px 0;
  box-shadow: 0px 1px 0px #5f94f5;
}

<div
  className="c0"
>
  <span
    className="c1"
    data-qa="notional-input__currency-pair-symbol"
  >
    EUR
  </span>
  <input
    className="c2"
    data-qa-id="notional-input__input-eurusd"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="1,000,000"
  />
  <div
    className="c3"
    data-qa="notional-input__validation-message"
  >
    Some information
  </div>
</div>
`;

exports[`NotionalInput with warning 1`] = `
.c1 {
  grid-area: Currency;
  opacity: 0.59;
  font-size: 0.625rem;
  line-height: 1.2rem;
}

.c3 {
  color: #F7D036;
  grid-area: Message;
  font-size: 0.6rem;
  line-height: normal;
  padding-top: 2px;
}

.c0 {
  display: grid;
  grid-template-columns: 30px auto 30px;
  grid-template-areas: 'Currency Input ResetInputValue' '. Message .';
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-rows: 23px 13px;
  margin-bottom: -0.5rem;
}

.c2 {
  grid-area: Input;
  background: none;
  text-align: center;
  outline: none;
  border: none;
  font-size: 0.75rem;
  width: 80px;
  padding: 2px 0;
  box-shadow: 0px 1px 0px #F7D036;
}

<div
  className="c0"
>
  <span
    className="c1"
    data-qa="notional-input__currency-pair-symbol"
  >
    EUR
  </span>
  <input
    className="c2"
    data-qa-id="notional-input__input-eurusd"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="1,000,000"
  />
  <div
    className="c3"
    data-qa="notional-input__validation-message"
  >
    Some warning
  </div>
</div>
`;

exports[`NotionalInput with warning 2`] = `
.c1 {
  grid-area: Currency;
  opacity: 0.59;
  font-size: 0.625rem;
  line-height: 1.2rem;
}

.c3 {
  color: #F7D036;
  grid-area: Message;
  font-size: 0.6rem;
  line-height: normal;
  padding-top: 2px;
}

.c0 {
  display: grid;
  grid-template-columns: 30px auto 30px;
  grid-template-areas: 'Currency Input ResetInputValue' '. Message .';
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-rows: 23px 13px;
  margin-bottom: -0.5rem;
}

.c2 {
  grid-area: Input;
  background: none;
  text-align: center;
  outline: none;
  border: none;
  font-size: 0.75rem;
  width: 80px;
  padding: 2px 0;
  box-shadow: 0px 1px 0px #F7D036;
}

<div
  className="c0"
>
  <span
    className="c1"
    data-qa="notional-input__currency-pair-symbol"
  >
    EUR
  </span>
  <input
    className="c2"
    data-qa-id="notional-input__input-eurusd"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="1,000,000"
  />
  <div
    className="c3"
    data-qa="notional-input__validation-message"
  >
    Some warning
  </div>
</div>
`;
